proof of concept

--- a/_config.yml
+++ b/_config.yml
@@ -2,35 +2,39 @@
 markdown: kramdown
 highlighter: rouge
 paginate: 100 # it will paginate after this number
-language: 'en-uk'
-words_per_minute: 200
+language: "en-us"
+words_per_minute: 200 # used to estimate how long to read
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /jasper2/
+baseurl: /america-water-blog/
 
 # Website info
-title: Ghost
-description: The professional publishing platform
+title: America's Water Blog
+description: A digital community sharing visions of water justice, security, and sustainability
 cover: assets/images/blog-cover.jpg
-logo: assets/images/blog-icon.png
-logo_dark: assets/images/favicon.png
+#logo: assets/images/blog-icon.png
+#logo_dark: assets/images/favicon.png
 favicon: assets/images/favicon.png
 CNAME: #add cname for website to be created
+email: jdossgollin@psu.edu
 
 # Social info
 navigation: True # show the navbar links
-subscribers: True # you need to connect an external service for this to work,
+subscribers: False # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
-twitter: tryghost # replace by your username
-facebook: ghost # replace by your username
+twitter: columbiawater # replace by your username
+facebook: Columbia-Water-Center-90696088246 # replace by your username
+
+# include pages
+include: [_pages]
 
 # Disqus
 disqus: False
 disqus_shortname: jekyller # replace with your disqus username
 
 # Google Analytics
-google_analytics: UA-69281367-1 # replace with your GA tracking identifier
+# google_analytics: UA-69281367-1 # replace with your GA tracking identifier
 
 # Permalinks
 permalink: /:title
@@ -67,13 +71,13 @@ feed:
 # or "master" otherwise
 safe: False
 lsi: False
-username: jekyller
-repo: jasper2
+username: jdossgollin
+repo: america-water-blog
 branch: master
 relative_source: ../jasper2/
 destination: ../jasper2-pages/
-production_url:  https://jekyller.github.io/jasper2/
-source_url:  https://github.com/jekyller/jasper2/
+production_url: https://jekyller.github.io/jasper2/
+source_url: https://github.com/jekyller/jasper2/
 
 exclude:
   - assets/css
