--- a/_config.yml
+++ b/_config.yml
@@ -73,12 +73,11 @@ feed:
 safe: False
 lsi: False
 username: jdossgollin
-repo: america-water-blog
+repo: americas-water-blog
 branch: master
-relative_source: ../jasper2/
-destination: ../jasper2-pages/
-production_url: https://jekyller.github.io/jasper2/
-source_url: https://github.com/jekyller/jasper2/
+destination: _site/
+production_url: https://jdossgollin.github.io/americas-water-blog/
+source_url: https://github.com/jdossgollin/americas-water-blog/
 
 exclude:
   - assets/css
@@ -98,3 +97,4 @@ exclude:
   - changelog.md
   - "*.Rmd"
   - .git*
+  - _site/
