try using travis-CI without rakefile as per travis-CI website

--- a/_config.yml
+++ b/_config.yml
@@ -80,21 +80,22 @@ production_url: https://jdossgollin.github.io/americas-water-blog/
 source_url: https://github.com/jdossgollin/americas-water-blog/
 
 exclude:
-  - assets/css
-  - node_modules
-  - vendor
+  - _site/
+  - .git*
   - .travis.yml
+  - "*.Rmd"
+  - assets/css
+  - changelog.md
   - Gemfile
   - Gemfile.lock
   - GHOST.txt
   - gulpfile.js
   - LICENSE
-  - package.json
+  - node_modules
   - package-lock.json
+  - package.json
   - Rakefile
   - README.md
   - script.py
-  - changelog.md
-  - "*.Rmd"
-  - .git*
-  - _site/
+  - script
+  - vendor
