--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ username: jdossgollin
 repo: americas-water-blog
 branch: master
 relative_source: ../americas-water-blog/
-destination: ../jasper2-pages/
+destination: _site/
 production_url: https://jdossgollin.github.io/americas-water-blog/
 source_url: https://github.com/jdossgollin/americas-water-blog/
 
