--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ ghost:
   url_full: http://jekyller.github.io/jasper2/
   url: jekyller.github.io/jasper2
   bio: The professional publishing platform
-  picture: /assets/images/ghost.png
+  picture: {{ site.baseurl }}assets/images/ghost.png
   facebook: ghost
   twitter: tryghost
   cover: False
