--- a/_config.yml
+++ b/_config.yml
@@ -67,11 +67,10 @@ feed:
 # or "master" otherwise
 safe: False
 lsi: False
-username: jekyller
-repo: jasper2
+username: jdossgollin
+repo: americas-water-blog
 branch: master
-relative_source: ../jasper2/
-destination: ../jasper2-pages/
+destination: _site
 production_url: https://jekyller.github.io/jasper2/
 source_url: https://github.com/jekyller/jasper2/
 
