--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ favicon: assets/images/favicon.png
 CNAME: #add cname for website to be created
 
 # Social info
-navigation: True # show the navbar links
-subscribers: True # you need to connect an external service for this to work,
+navigation: False # show the navbar links
+subscribers: False # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
-twitter: tryghost # replace by your username
-facebook: ghost # replace by your username
+twitter: False # replace by your username
+facebook: False # replace by your username
 
 # Disqus
 disqus: False
@@ -71,8 +71,8 @@ username: jdossgollin
 repo: americas-water-blog
 branch: master
 destination: _site
-production_url: https://jekyller.github.io/jasper2/
-source_url: https://github.com/jekyller/jasper2/
+production_url: https://americaswater.blog
+source_url: https://github.com/jdossgollin/americas-water-blog/
 
 include: [_pages]
 
