borrow from americas water web site

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: "/"
 
 # Website info
 title: America's Water Blog
-description: An inclusive online community working towards equitable, sustainable, and resilient water systems
+description: An inclusive online community working to reimagine infrastructure design and water management in the farms, cities and watercourses of the future
 cover: assets/images/blog-cover.jpg
 #logo: assets/images/blog-icon.png
 #logo_dark: assets/images/favicon.png
