--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: "/"
 
 # Website info
 title: America's Water Blog
-description: An inclusive online community working to reimagine infrastructure design and water management in the farms, cities and watercourses of the future
+description: An inclusive online community reimagining infrastructure design and water management in the farms, cities and watercourses of the future
 cover: assets/images/blog-cover.jpg
 #logo: assets/images/blog-icon.png
 #logo_dark: assets/images/favicon.png
@@ -36,10 +36,11 @@ permalink: /:title
 # Tags' info in `_data/tags_info.yml`
 
 # gems and other configs
-plugins_dir: [_plugins]
+plugins_dir: "_plugins"
 plugins:
-  - jekyll-paginate
   - jekyll-feed
+  - jekyll-katex
+  - jekyll-paginate
   - jekyll-relative-links
 
 relative_links:
