reorganize photos and update instructions

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,6 +4,6 @@ jdossgollin:
   url_full: https://jamesdossgollin.me
   url: jamesdossgollin.me
   bio: I use data science, decision science, and earth science to design adaptive infrastructure for resilient communities
-  picture: assets/images/people/james.jpg
+  picture: assets/images/people/jdossgollin.jpg
   twitter: jdossgollin
-  cover: False
+  cover: assets/images/people/jdossgollin-cover.jpg
