--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -2,4 +2,4 @@ how-to-contribute:
   name: how-to-contribute
   long_name: How to contribute
   description: Guides for how to contribute to this blog
-  cover: assets/images/welcome.jpg
+  cover: assets/images/tags/how-to-contribute.jpg
