--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ plugins:
   - jekyll-katex
   - jekyll-paginate
   - jekyll-relative-links
+  - jekyll-scholar
 
 relative_links:
   enabled: true
@@ -74,6 +75,14 @@ utterance:
   issue-term: title # Choose the mapping between blog posts and GitHub issues.
   theme: github-light # Choose an Utterances theme that matches your blog. 'github-light' is default
   label: blog-comments # Choose the label that will be assigned to issues created by Utterances.
+
+# settings for jeykll-scholar
+scholar:
+  style: american-geophysical-union
+  source: ./_bibliography
+  bibliography: library.bib
+  sort_by: year
+  order: descending
 
 exclude:
   - assets/css
