This is the first draft of the climate-migration post
pconcha first post

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,3 +7,13 @@ jdossgollin:
   picture: assets/images/people/jdossgollin.jpg
   twitter: jdossgollin
   cover: assets/images/people/jdossgollin-cover.jpg
+
+  pconcha:
+  username: pconcha
+  name: Paulina Concha Larrauri
+  url_full: https://www.linkedin.com/in/paulina-concha-9868a617/
+  url: https://www.linkedin.com/in/paulina-concha-9868a617/
+  bio: I study water risks in industrial, agricultural, and urban settings. 
+  picture: assets/images/people/pconcha.jpg
+  twitter: luckypau
+  cover: assets/images/people/pconcha-cover.jpg
